2007-10-18  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari_javanvm.[ch] javanvm/atari800.java added for Java NestedVM port
  configure.ac, Makefile.in, platform.h, INSTALL, USAGE: modified for
  NestedVM port
* screen.c, USAGE -showspeed command line option
* win32/* suppress gcc warnings

2007-10-11  Perry McFarlane  <perry_m@fastmail.fm>
* devices.h: make h_current_dir extern
* monitor.c: COLOUR -> COLOR

2007-10-04  Perry McFarlane  <perry_m@fastmail.fm>
* colours.[ch], atari.[ch], platform.h, USAGE, atari_sdl.c, atari_ntsc.c,
  configure.ac, TODO: added support for switching between NTSC and PAL palettes.
  The platform-specific function Atari_PaletteUpdate is now required in those
  ports which calculate their own palette from colortable.  The SDL version
  is working but other ports will need to be updated.

2007-10-02  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: cleaner macros
* cycle_map.c: minor cleanup
* ui.c, README, amiga/Atari800.guide: GPL version 2 now, not 1
* most files: FSF address change in GPL notices.

2007-09-30  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: Added better support for GTIA bug mode.

2007-09-12  Perry McFarlane  <perry_m@fastmail.fm>
* memory.c: Fix PAGED_MEM error (missing break in switch) with POKEY in loading
  saved states.
* memory.[ch], statesav.c, cpu.c Support Axlon and Mosaic state saving.
  SAVE_VERSION_NUMBER upgraded to from 4 to 5

2007-09-06  Perry McFarlane  <perry_m@fastmail.fm>
* memory.[ch], atari.c, TODO, USAGE: add Axlon and Mosaic RAM expansions for the
  400/800

2007-08-04  Perry McFarlane  <perry_m@fastmail.fm>
* memory.c: fix PBIM1/M2_Get/PutByte in MemStateRead
* atari_ntsc.c: tweak default parameters a bit

2007-08-02  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c: fix broken Caps Lock key handling
* atari_sdl.c: reduce default NTSC scanlines percentage from 20 to 5

2007-07-31  Perry McFarlane  <perry_m@fastmail.fm>