@@ -2,8 +2,9 @@
 * javanvm/atari_javanvm.[ch] javanvm/atari800.java added for Java NestedVM port
   configure.ac, Makefile.in, platform.h, INSTALL, USAGE: modified for
   NestedVM port
-* screen.c, USAGE -showspeed command line option
-* win32/* suppress gcc warnings
+* screen.c, USAGE: -showspeed command line option
+* win32/*: suppress gcc warnings
+* win32/screen_win32.c: support Atari_PaletteUpdate
 
 2007-10-11  Perry McFarlane  <perry_m@fastmail.fm>
 * devices.h: make h_current_dir extern
